[gd_scene load_steps=2 format=3 uid="uid://bu5s4o3d6s2ba"]

[ext_resource type="Script" uid="uid://ccwyaf008viwl" path="res://Scenes/Dialogues/dialogue_main_Script.gd" id="1_d5u3x"]

[node name="DialogueMain" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d5u3x")

[node name="Dialogue_Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -760.0
offset_top = -304.0
offset_right = 760.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.08627451, 0.08627451, 0.08627451, 1)

[node name="Dialogue_Margin" type="MarginContainer" parent="Dialogue_Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 16.0
offset_right = -56.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 40

[node name="Dialogue_Text" type="RichTextLabel" parent="Dialogue_Background/Dialogue_Margin"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 50
theme_override_font_sizes/italics_font_size = 50
bbcode_enabled = true
vertical_alignment = 1

[node name="Options Screen" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options 1 Button" type="Button" parent="Options Screen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -760.0
offset_top = -424.0
offset_right = 760.0
offset_bottom = -247.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Option 1"

[node name="Options 2 Button" type="Button" parent="Options Screen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -760.0
offset_top = -216.0
offset_right = 760.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Option 2
"
